test/organized_tests/semantic-error/case6/Main.java
package case6;

import java.util.Scanner;

public class Main {
    public static void main(String[] args) {
        int a = 1;
        int b = 2;
        int c = 3;
        int d = 4;
        int z = a + (c + d);
        int y = (a + b) * c;
        int x = d / t;
        int Quang = (a + an_undefined_variable_come_out_of_some_where) + (c + d);
        System.out.printf("Hello world");
    }
}